課題実施　登録画面への項目追加　＆　商品詳細画面へ登録情報の表示

--- a/html/template/default/assets/css/style.css
+++ b/html/template/default/assets/css/style.css
@@ -417,6 +417,15 @@ Styleguide 1.1.1
   color: #525263; }
 /*
 
+サブタイトル
+*/
+.ec-headingSubtitle {
+  line-height: 1.2;
+  font-size: 16px;
+  font-weight: normal;
+  color: #525263; }
+/*
+
 
 ページヘッダ
 
