--- a/src/Eccube/Resource/template/default/Product/detail.twig
+++ b/src/Eccube/Resource/template/default/Product/detail.twig
@@ -254,6 +254,10 @@ $('.ec-modal').hide()
 			<div class="ec-grid2__cell">
 				<div
 					class="ec-productRole__profile">
+					{# サブタイトル #}
+					<div class="ec-productRole__title">
+						<div class="ec-headingSubtitle">{{ Product.subtitle }}</div>
+					</div>
 					{# 商品名 #}
 					<div class="ec-productRole__title">
 						<h2 class="ec-headingTitle">{{ Product.name }}</h2>
